# safety-landing-point-detection-for-drone

./: .gitignore  README.md  run.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gng_node/lib/gng_node/: dbl_gng_node
install/gng_node/share/gng_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/offboard_control/share/ament_index/resource_index/package_run_dependencies/: offboard_control
install/offboard_control/share/ament_index/resource_index/parent_prefix_path/: offboard_control
install/offboard_control/share/offboard_control/: package.dsv  package.ps1  package.sh
install/px4_msgs/include/px4_msgs/px4_msgs/msg/detail/: airspeed_validated__struct.hpp  battery_status__struct.hpp  vehicle_status__struct.hpp
install/px4_msgs/share/px4_msgs/: package.sh
install/segmentation_node/include/segmentation_node/: ddgng.hpp  landing_circle.hpp
install/segmentation_node/lib/segmentation_node/: cloud_size_node  cylinder_crop  landing_circle  plane_segmentation_ransac
install/segmentation_node/share/segmentation_node/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/segmentation_node/share/segmentation_node/cmake/: segmentation_nodeConfig.cmake
log/: latest_build
src/gng_node/: setup.cfg  setup.py
src/gng_node/gng_node/: dbl_gng.py
src/logger_stats/: package.xml  setup.cfg  setup.py
src/logger_stats/logger_stats/: stats_logger_node.py
src/offboard_control/: CMakeLists.txt  package.xml
src/offboard_control/scripts/: keyboard_control.py
src/offboard_control/src/: drone_kinematic.cpp
src/segmentation_node/: CMakeLists.txt
src/segmentation_node/include/segmentation_node/: landing_circle.hpp  plane_segmentation_gng.hpp
src/segmentation_node/launch/: publish_safety_point.launch.py
src/segmentation_node/src/: cloud_size_node.cpp  cylinder_crop.cpp  ddgng_node.cpp  landing_circle.cpp  plane_segmentation_gng.cpp  plane_segmentation_ransac.cpp
